# mini-hf

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 00001_init_database.py
frontend/: .dockerignore  .env.example  Dockerfile  README.md  index.html  nginx.conf  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/docs/: faq.md  hf-repo.md  index.md  meta.json  tasks.md
frontend/src/: index.css  main.tsx  router.tsx  vite-env.d.ts
frontend/src/components/: repo-tree-viewer.tsx  theme-provider.tsx
frontend/src/components/auth/: ProtectedRoute.tsx
frontend/src/components/dashboard/: ChartSection.tsx  QuickActions.tsx  RecentTasks.tsx  StatCards.tsx  TasksTable.tsx
frontend/src/components/repo/: RepoCard.tsx  RepoCardSkeleton.tsx  RepoGrid.tsx  RepoPagination.tsx  index.ts
frontend/src/components/shared/: Logo.tsx  MouseTrail.tsx  Section.tsx  ThemeToggle.tsx
frontend/src/components/tasks/: ActiveTaskList.tsx  CreateTaskDialog.tsx  TaskRow.tsx  (+11 more)
frontend/src/constants/: landing.ts
frontend/src/hooks/: use-typewriter.ts  useCounter.ts  useRepoList.ts  useReveal.ts  useTaskActions.ts  useTaskDetail.ts  useTaskList.ts  useTaskProgress.ts
frontend/src/layouts/: ConsoleLayout.tsx  LandingLayout.tsx
frontend/src/lib/: api-types.ts  api.ts  query-client.ts  query-keys.ts  utils.ts
frontend/src/pages/: AuthPage.tsx  Repositories.tsx  TasksPublic.tsx  index.tsx
frontend/src/stores/: auth-store.ts
frontend/src/types/: dashboard.ts  task.ts
(+46 files in other folders)
