# Workspace root configuration
[project]
name = "mini-hf"
version = "0.1.0"
description = "Model cache repository system for Huggingface/Modelscope"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "loguru>=0.7.3",
]

[tool.uv.workspace]
members = [
    "packages/*",
]

[dependency-groups]
dev = [
    "ruff>=0.15.9",
]
